# robot_control

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
euslisp/: ar-pose-marker-test.l  robot-control.l
open_manipulator/: README.md
robot_control/: package.xml
robot_interface/: CMakeLists.txt  package.xml  setup.py
robot_interface/euslisp/: ar-marker-util.l  generate-coords.l  robot-control.l  robot-manipulation.l
robot_interface/src/robot_interface/: robot_interface.py
robots/dobot_magician/: README.md
robots/dobot_magician/dobot_magician/: CMakeLists.txt  package.xml
robots/dobot_magician/dobot_magician_description/: CMakeLists.txt  README.md  package.xml
robots/dobot_magician/dobot_magician_description/launch/: display.launch  gazebo.launch
robots/dobot_magician/dobot_magician_description/urdf/: demo.urdf  magician.xml
robots/dobot_magician/dobot_magician_interface/: CMakeLists.txt  package.xml  setup.py
robots/dobot_magician/dobot_magician_interface/scripts/: test_manip_dobot_magician.py
robots/dobot_magician/dobot_magician_interface/src/dobot_magician_interface/: dobot_magician_interface.py
robots/dobot_magician/dobot_magician_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
robots/dobot_magician/dobot_magician_moveit_config/config/: fake_controllers.yaml  gazebo_magician.urdf  joint_limits.yaml  magician.srdf
robots/dobot_magician/dobot_magician_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  (+11 more)
robots/dobot_magician/dobotdll/: CMakeLists.txt  README.md  package.xml
robots/dobot_magician/magician_description/: CMakeLists.txt  package.xml
robots/fr3/: .gitignore  CMakeLists.txt  package.xml
robots/fr3/euslisp/: fr3-bringup.l  fr3-interface.l  fr3-utils.l
robots/franka_arm/: .gitignore  CMakeLists.txt  package.xml
robots/franka_arm/config/: fr3_experiment_visualization.rviz  fr3_visualization.rviz  panda_pedestal_visualization.rviz  panda_visualization.rviz
robots/franka_arm/euslisp/: fr3-bringup.l  fr3-experiment-bringup.l  fr3-experiment-interface.l  fr3-interface.l  fr3-pedestal-bringup.l  fr3-pedestal-interface.l  fr3-utils.l  panda-bringup.l  panda-experiment-bringup.l  panda-experiment-interface.l  panda-pedestal-bringup.l  panda-pedestal-interface.l
robots/franka_arm/launch/: fr3_experiment_visualization.launch  fr3_pedestal_visualization.launch  fr3_visualization.launch  franka_arm_visualization.launch  panda_pedestal_visualization.launch  panda_visualization.launch
robots/franka_arm/models/: fr3.urdf.xacro  fr3_experiment.urdf.xacro  fr3_pedestal.urdf.xacro  franka_arm.urdf.xacro  franka_arm_pedestal.urdf.xacro  panda.urdf.xacro  panda_experiment.urdf.xacro  panda_pedestal.urdf.xacro  pedestal.urdf.xacro
robots/nextage/: README.md
robots/nextage/nextage_nxa_interface/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
robots/nextage/nextage_nxa_interface/install/: build.sh
robots/nextage/nextage_nxa_interface/scripts/: sample_variable_python3.py
robots/nextage/nextage_nxa_interface/src/nextage_nxa_interface/: nextage_nxa_interface.py
robots/open_manipulator_x/: CMakeLists.txt  README.md  package.xml
robots/open_manipulator_x/install/: open_manipulator.rosinstall  open_manipulator_x.noetic.rosinstall
robots/open_manipulator_x/scripts/: open_manipulator_x_sample.py
robots/panda/: .gitignore  CMakeLists.txt  README.md  package.xml
robots/panda/config/: fr3_pedestal_visualization.rviz  panda_experiment_visualization.rviz  panda_pedestal_visualization.rviz  panda_visualization.rviz
robots/panda/euslisp/: fr3-bringup.l  fr3-experiment-bringup.l  fr3-experiment-interface.l  fr3-interface.l  fr3-pedestal-bringup.l  fr3-pedestal-interface.l  fr3-utils.l  panda-experiment-bringup.l  panda-experiment-interface.l  panda-pedestal-bringup.l  panda-pedestal-interface.l  panda-startup.l
robots/panda/launch/: fr3_experiment_visualization.launch  fr3_pedestal_visualization.launch  fr3_visualization.launch  franka_arm_visualization.launch  panda.launch  panda_experiment_visualization.launch  panda_pedestal_visualization.launch  panda_visualization.launch
robots/panda/models/: fr3.urdf.xacro  fr3_experiment.urdf.xacro  fr3_pedestal.urdf.xacro  franka_arm_pedestal.urdf.xacro  panda.urdf.xacro  panda_experiment.urdf.xacro  panda_pedestal.urdf.xacro
robots/uarm_swift_pro/: CMakeLists.txt  README.md  package.xml
robots/uarm_swift_pro/install/: uarm_swift_pro.melodic.rosinstall
robots/uarm_swift_pro/launch/: swift_pro_display.launch  swift_pro_moveit_manip.launch
robots/ufactory_arm/: README.md
robots/ufactory_arm/lite6_interface/: CMakeLists.txt  README.md  package.xml  setup.py
robots/ufactory_arm/lite6_interface/install/: lite6_interface.noetic.rosinstall
robots/ufactory_arm/lite6_interface/launch/: lite6.launch
robots/ufactory_arm/lite6_interface/scripts/: test_gripper_lite6.py  test_manip_lite6.py
robots/ufactory_arm/lite6_interface/src/lite6_interface/: lite6_interface.py
robots/ufactory_arm/swift_pro_interface/: CMakeLists.txt  README.md  package.xml  setup.py
robots/ufactory_arm/swift_pro_interface/config/: swift_pro.rviz
robots/ufactory_arm/swift_pro_interface/launch/: swift_pro_control.launch  swift_pro_display.launch  swift_pro_moveit_manip.launch
robots/ufactory_arm/swift_pro_interface/scripts/: test_manip.py  test_manip_swiftpro.py  test_pump_off.py
robots/ufactory_arm/swiftpro_interface/: CMakeLists.txt  README.md  package.xml  setup.py
robots/ufactory_arm/swiftpro_interface/install/: swiftpro_interface.noetic.rosinstall
robots/ufactory_arm/swiftpro_interface/launch/: swiftpro_display.launch  swiftpro_moveit_manip.launch
robots/ufactory_arm/swiftpro_interface/scripts/: test_manip_swiftpro.py  test_pump_on.py
robots/ufactory_arm/swiftpro_interface/src/swiftpro_interface/: swiftpro_interface.py
robots/ufactory_arm/ufactory_arm/: CMakeLists.txt  package.xml
src/: open_manipulator_sample.py
src/robot_interface/: robot_interface.py
(+6 files in other folders)
