<package>
  <name>robot_control</name>
  <version>1.1.0</version>
  <description> robot control </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roseus</build_depend>

  <run_depend>roseus</run_depend>

</package>
