<package format="2">
  <name>robot_control</name>
  <version>0.1.0</version>
  <description> robot control </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>roseus</depend>
  <depend>ros_control</depend>
  <depend>ros_controllers</depend>
  <!-- common -->
  <depend>robot_interface</depend>

</package>
