<package format="2">
  <name>fr3</name>
  <version>1.1.0</version>
  <description> fr3 interface </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>

  <depend>franka_description</depend>
  <depend>franka_msgs</depend>
  <depend>franka_gripper</depend>
  <depend>franka_control</depend>

  <depend>euscollada</depend>
  <depend>pr2eus</depend>
  <depend>panda_eus</depend>
  <depend>jsk_panda_startup</depend>

</package>
