<package format="2">
  <name>franka_arm</name>
  <version>0.1.0</version>
  <description> franka_arm interface </description>

  <maintainer email="yuki.asano3206@gmail.com">Yuki Asano</maintainer>
  <author email="yuki.asano3206@gmail.com">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>

  <depend>franka_control</depend>
  <depend>franka_description</depend>
  <depend>franka_gripper</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>franka_visualization</depend>

  <depend>euscollada</depend>
  <depend>jsk_panda_startup</depend>
  <depend>panda_eus</depend>
  <depend>pr2eus</depend>

  <depend>robot_control</depend>

</package>
