<package format="2">
  <name>open_manipulator_x</name>
  <version>1.1.0</version>
  <description> Tutorial for OpenManipulator-x </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_control</depend>
  <depend>open_manipulator_gazebo</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>open_manipulator_simulations</depend>

</package>
