<package format="2">
  <name>panda</name>
  <version>1.1.0</version>
  <description> franka_arm interface </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>

  <depend>franka_control</depend>
  <depend>franka_description</depend>
  <depend>franka_gripper</depend>
  <depend>franka_msgs</depend>

  <depend>euscollada</depend>
  <depend>jsk_panda_startup</depend>
  <depend>panda_eus</depend>
  <depend>pr2eus</depend>

</package>
