<package format="2">
  <name>uarm_swift_pro</name>
  <version>1.1.0</version>
  <description> Tutorial for uArm Swift Pro </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>

  <depend>robot_control</depend>
  <depend>swiftpro</depend>
  <depend>pro_moveit_config</depend>

</package>
