<package format="2">
  <name>dobot_magician_interface</name>
  <version>1.1.0</version>
  <description> Dobot magician interface </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>dobot_magician_description</depend>
  <depend>dobot_magician_moveit_config</depend>

</package>
