<package format="2">
  <name>dobotdll</name>
  <version>0.1.0</version>
  <description> dobotdll </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libqt5-serialport</depend>
  <depend>libqt5-serialport-dev</depend>

</package>
