<package format="2">
  <name>nextage_nxa_interface</name>
  <version>0.1.0</version>
  <description> Interface for NEXTAGE NXA </description>

  <maintainer email="yuki.asano3206@gmail.com">Yuki Asano</maintainer>
  <author email="yuki.asano3206@gmail.com">Yuki Asano</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
