<package format="2">
  <name>lite6_interface</name>
  <version>1.1.0</version>
  <description> UFactory Lite 6 interface </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>lite6_moveit_config</depend>
  <depend>xarm_description</depend>

</package>
