<package format="2">
  <name>swiftpro_interface</name>
  <version>0.1.0</version>
  <description> uArm Swift Pro interface </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>

  <depend>pro_moveit_config</depend>
  <depend>libserial-dev</depend>  <!-- for swiftpro pkg -->
  <depend>swiftpro</depend>

  <depend>robot_interface</depend>

</package>
