<package format="2">
  <name>ufactory_arm</name>
  <version>1.1.0</version>
  <description> UFactory Arm </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>lite6_interface</depend>
  <depend>swift_pro_interface</depend>

</package>
